--- a/mobile/src/modules/css/iconfont.scss
+++ b/mobile/src/modules/css/iconfont.scss
@@ -125,8 +125,15 @@
 
 // .icon-sycolor-:before { content: "\e78b"; }
 
+.icon-aixin:before { content: "\e612"; }
 
+.icon-dianzan:before { content: "\e67a"; }
 
+.icon-14000:before { content: "\e66a"; }
+
+.icon-ren:before { content: "\e6c7"; }
+
+.icon-guanbi:before { content: "\e696"; }
 
 .icon-search:before { content: "\e61d"; }
 
