--- a/mobile/src/modules/css/iconfont.scss
+++ b/mobile/src/modules/css/iconfont.scss
@@ -125,6 +125,18 @@
 
 // .icon-sycolor-:before { content: "\e78b"; }
 
+.icon-duigou:before { content: "\e617"; }
+
+.icon-yikan:before { content: "\e765"; }
+
+.icon-tanhao-copy:before { content: "\e616"; }
+
+.icon-xiala:before { content: "\e60d"; }
+
+.icon-wenhaokongxin:before { content: "\e62a"; }
+
+.icon-rightArrow:before { content: "\e606"; }
+
 .icon-aixin:before { content: "\e612"; }
 
 .icon-dianzan:before { content: "\e67a"; }
