--- a/mobile/src/modules/html/forum/forum.scss
+++ b/mobile/src/modules/html/forum/forum.scss
@@ -2,112 +2,114 @@
 @import "mixins.scss";
 
 
-.content{
-	a{
-		display: block;
-		width: 25%;
-		float: left;
-		padding-bottom: 20px;
-		span{
+.forum-xsq{
+	.content{
+		a{
 			display: block;
-			height: 50px;
-			width: 50px;
-			margin: 10px auto;
-			border-radius: 50%;
-			line-height: 50px;
-			font-size: 25px;
-			color: $white;
-			text-align: center;
-			background: yellow;
+			width: 25%;
+			float: left;
+			padding-bottom: 20px;
+			span{
+				display: block;
+				height: 50px;
+				width: 50px;
+				margin: 10px auto;
+				border-radius: 50%;
+				line-height: 50px;
+				font-size: 25px;
+				color: $white;
+				text-align: center;
+				background: yellow;
+			}
+			p{
+				text-align: center;
+			}
+			.bg1{
+				background: #ed5565;
+			}
+			.bg2{
+				background: #ffce54;
+			}
+			.bg3{
+				background: #48cfad;
+			}
+			.bg4{
+				background: #5d9cec;
+			}
+			.bg5{
+				background: #ac92ec;
+			}
+			.bg6{
+				background: #fc6e51;
+			}
+			.bg7{
+				background: #a0d468;
+			}
+			.bg8{
+				background: #5db4ec;
+			}
+			
 		}
-		p{
-			text-align: center;
-		}
-		.bg1{
-			background: #ed5565;
-		}
-		.bg2{
-			background: #ffce54;
-		}
-		.bg3{
-			background: #48cfad;
-		}
-		.bg4{
-			background: #5d9cec;
-		}
-		.bg5{
-			background: #ac92ec;
-		}
-		.bg6{
-			background: #fc6e51;
-		}
-		.bg7{
-			background: #a0d468;
-		}
-		.bg8{
-			background: #5db4ec;
-		}
-		
 	}
-}
-.hot{
-  line-height:45px;
-  background:#f2f2f2;
-  span{
-    padding-left:22px;
-  }
-  a{
-    float:right;
-    padding-right:20px;
-    text-decoration:none;
-  }
-}
+	.hot{
+	  line-height:45px;
+	  background:#f2f2f2;
+	  span{
+	    padding-left:22px;
+	  }
+	  a{
+	    float:right;
+	    padding-right:20px;
+	    text-decoration:none;
+	  }
+	}
 
 
-.story{
-	padding: 15px 20px;
-	.issue{
-	  li{
-	    padding:15px 0;
-	    line-height: 25px;
-	    border-bottom:1px dashed #a5a5a5;
-	    span{
-	      display: block;
-	      display: inline-block;
-	      margin-right:9px;
-	      width:25px;
-	      height: 25px;
-	      text-align: center;
-	      color:$white;
-	      border-radius:50%;
-	      background:#ed5565;
+	.story{
+		padding: 15px 20px;
+		.issue{
+		  li{
+		    padding:15px 0;
+		    line-height: 25px;
+		    border-bottom:1px dashed #a5a5a5;
+		    span{
+		      display: block;
+		      display: inline-block;
+		      margin-right:9px;
+		      width:25px;
+		      height: 25px;
+		      text-align: center;
+		      color:$white;
+		      border-radius:50%;
+		      background:#ed5565;
+		    }
+
+		    a{
+		      color:#a5a5a5;
+		    }    
+		  }
+		  li:last-child{
+		    border:none;
+		  }
+		}
+	}
+
+	.share{
+	  position:fixed;
+	  right:0;
+	  bottom:20%;
+	  width:131px;
+	  height:75px;
+	  border:1px solid #a5a5a5;
+	  ul{
+	    li{
+	      height: 41px;
+	      line-height: 41px;
+	      padding-left:15px;
 	    }
-
-	    a{
-	      color:#a5a5a5;
-	    }    
-	  }
-	  li:last-child{
-	    border:none;
+	    li:nth-child(1){
+	      background:#a5a5a5;
+	    }
 	  }
 	}
-}
-
-.share{
-  position:fixed;
-  right:0;
-  bottom:20%;
-  width:131px;
-  height:75px;
-  border:1px solid #a5a5a5;
-  ul{
-    li{
-      height: 41px;
-      line-height: 41px;
-      padding-left:15px;
-    }
-    li:nth-child(1){
-      background:#a5a5a5;
-    }
-  }
 }
