--- a/mobile/src/modules/html/penal/penal.scss
+++ b/mobile/src/modules/html/penal/penal.scss
@@ -1,97 +1,100 @@
 @import "variables.scss";
 @import "mixins.scss";
 
-.know{
-	.logo{
-		height: 50px;
-		width: 50px;
-		margin: 15px auto;
-		border-radius: 50%;
-		background-color: #ef6189;
-		text-align: center;
-		span{
-			line-height: 50px;
-			font-size: 25px;
-			color: $white;
+
+.penal-xsq{
+	.know{
+		.logo{
+			height: 50px;
+			width: 50px;
+			margin: 15px auto;
+			border-radius: 50%;
+			background-color: #ef6189;
+			text-align: center;
+			span{
+				line-height: 50px;
+				font-size: 25px;
+				color: $white;
+			}
+		}
+		h3{
+			text-align: center;
+		}
+		p{
+			font-size: 12px;
+			padding: 0 12px 20px 12px;
+			text-indent: 27px;
+			text-align: justify;
+			border-bottom: 1px solid #ddd;
 		}
 	}
-	h3{
-		text-align: center;
+	.wait{
+		height: 40px;
+		width: 100vw;
+		border-bottom: 0.5px solid #ddd;
+		box-shadow: 0 10px 0 #f8f8f8;
+		p{
+			line-height: 40px;
+			width: 49.8vw;
+			font-size: 13px;
+			text-align: center;
+			span{
+				margin-left: 10px;
+				color: #e53f1f;
+			}
+		}
+		.aside{
+			border-right: 1px solid #ddd;
+		}
 	}
-	p{
-		font-size: 12px;
-		padding: 0 12px 20px 12px;
-		text-indent: 27px;
-		text-align: justify;
-		border-bottom: 1px solid #ddd;
-	}
-}
-.wait{
-	height: 40px;
-	width: 100vw;
-	border-bottom: 0.5px solid #ddd;
-	box-shadow: 0 10px 0 #f8f8f8;
-	p{
+	.lawyer{
+		margin-top: 10px;
 		line-height: 40px;
-		width: 49.8vw;
-		font-size: 13px;
-		text-align: center;
-		span{
-			margin-left: 10px;
-			color: #e53f1f;
-		}
-	}
-	.aside{
-		border-right: 1px solid #ddd;
-	}
-}
-.lawyer{
-	margin-top: 10px;
-	line-height: 40px;
-	padding: $padding;
-	border-bottom: 1px solid #ddd;
-	a{
-		font-size: 13px;
-		color: #ea7e15;
-	}
-}
-.lawyer-list{
-	width: 100vw;
-	a{
-		display: inline-block;
-		width: 100%;
+		padding: $padding;
 		border-bottom: 1px solid #ddd;
-		.box{
-			padding: 16px 12px;
-			.head{
-				height: 60px;
-				width: 60px;
-				margin-right: 16px;
-				img{
-					width: 100%;
+		a{
+			font-size: 13px;
+			color: #ea7e15;
+		}
+	}
+	.lawyer-list{
+		width: 100vw;
+		a{
+			display: inline-block;
+			width: 100%;
+			border-bottom: 1px solid #ddd;
+			.box{
+				padding: 16px 12px;
+				.head{
+					height: 60px;
+					width: 60px;
+					margin-right: 16px;
+					img{
+						width: 100%;
+					}
 				}
-			}
-			.txt{
-				.pan1{
-					font-size: 13px;
-				}
-				.pan2{
-					font-size: 11px;
-					line-height: 20px;
+				.txt{
+					.pan1{
+						font-size: 13px;
+					}
+					.pan2{
+						font-size: 11px;
+						line-height: 20px;
+					}
 				}
 			}
 		}
 	}
-}
-.start{
-	display: block;
-	line-height: 45px;
-	width: 80%;
-	margin: 10px auto;
-	border-radius: 4px;
-	color: $white;
-	text-align: center;
-	background: $brand;
+	.start{
+		display: block;
+		line-height: 45px;
+		width: 80%;
+		margin: 10px auto;
+		border-radius: 4px;
+		color: $white;
+		text-align: center;
+		background: $brand;
+	}
 }
 
 
