--- a/mobile/src/modules/html/sort/sort.scss
+++ b/mobile/src/modules/html/sort/sort.scss
@@ -1,32 +1,34 @@
 @import "variables.scss";
 @import "mixins.scss";
 
-.sort-list{
-	background-color: pink;
-	ul{
-		min-width: 300px;
-		background-color: #f8f8f8;
-		li{
-			float: left;
-			width: 33.1%;
-			text-align: center;
-			border-bottom: 1px solid #ddd;
-			border-right: 1px solid #ddd;
-			&:last-child{
-			border-right: none;
-			}
-			a{
-				display: block;
-				padding: 25px 0;
-				width: 100%;
-				background-color: #f8f8f8;
-				p{
-					font-size: 15px;
-					font-weight: bold;
+.sort-xsq{
+	.sort-list{
+		background-color: pink;
+		ul{
+			min-width: 300px;
+			background-color: #f8f8f8;
+			li{
+				float: left;
+				width: 33.1%;
+				text-align: center;
+				border-bottom: 1px solid #ddd;
+				border-right: 1px solid #ddd;
+				&:last-child{
+				border-right: none;
 				}
-				span{
-					font-size: 14px;
-					line-height: 25px;
+				a{
+					display: block;
+					padding: 25px 0;
+					width: 100%;
+					background-color: #f8f8f8;
+					p{
+						font-size: 15px;
+						font-weight: bold;
+					}
+					span{
+						font-size: 14px;
+						line-height: 25px;
+					}
 				}
 			}
 		}
